# genshin-ime-dictionary

./: Cargo.toml  README.md
src/: ext.rs  main.rs  mediawiki.rs  romaji.rs
