[package]
name = "genshin-ime-dictionary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
filepath = "0.1.2"
quick-xml = "0.31.0"
reqwest = "0.11.22"
tempfile = "3.8.1"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "fs", "process"] }
